# governed-omop-rag

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  feature_list.json  init.sh  outputs_commands.md  pyproject.toml
.github/workflows/: ci.yml
data/eval/: gold_set.csv  gold_set_atih.csv
data/examples/: exemple_entrees.csv
data/router/: cim10_snomed_official.csv
docs/: architecture.md  evaluation.md  governance.md  guide_utilisateur.md  ia_act.md  reinjection.md  souverainete.md
docs/assets/: .gitkeep
scripts/: build_gold_set.py  build_official_map.py
src/governed_omop_rag/: __init__.py  cli.py  config.py  feedback.py  service.py
src/governed_omop_rag/agents/: __init__.py  factory.py  graph.py  llm.py  orchestrator.py  proposer.py  schemas.py  verifier.py
src/governed_omop_rag/api/: __init__.py  app.py
src/governed_omop_rag/core/: __init__.py  logging.py  models.py
src/governed_omop_rag/eval/: __init__.py  gold_set.py  metrics.py  quality.py  runner.py
src/governed_omop_rag/medallion/: __init__.py  bronze.py  db.py  gold.py  normalize.py  pipeline.py  silver.py
src/governed_omop_rag/retrieval/: __init__.py  bm25.py  cache.py  embeddings.py  factory.py  index.py  retriever.py  vectorstore.py
src/governed_omop_rag/router/: __init__.py  deterministic.py  hybrid.py
src/governed_omop_rag/ui/: __init__.py  app.py  service.py
tests/: test_agents.py  test_api.py  test_bm25.py  test_cache.py  test_cli.py  test_config.py  test_embeddings.py  test_eval.py  test_feedback.py  test_graph.py  test_llm_parse.py  test_medallion.py  test_metrics.py  test_models.py  test_quality.py  test_retrieval_index.py  test_retriever_hybrid.py  test_router.py  test_router_hybrid.py  test_service.py  test_ui_service.py  test_vectorstore.py
tests/fixtures/: CONCEPT.csv  CONCEPT_SYNONYM.csv  router_map.csv
