[project]
name = "governed-omop-rag"
version = "0.0.1"
description = "RAG agentique gouverné : mapping CIM-10 FR / libellés cliniques -> concepts standard OHDSI (OMOP CDM), human-in-the-loop."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "beko" }]
keywords = ["omop", "ohdsi", "rag", "cim-10", "snomed", "healthcare", "mapping", "agents"]

# --- Dépendances cœur (Phase 0/1) : légères, pour que `uv sync` reste rapide.
# Les briques lourdes (embeddings, agents, api, ui) sont dans des groupes
# optionnels installés phase par phase (cf. harness). ---
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "structlog>=24.1",
    "typer>=0.12",
    "duckdb>=1.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
# Phase 1-2 : retrieval hybride + embeddings biomédicaux locaux + Qdrant (souverain).
retrieval = [
    "qdrant-client>=1.9",
    "sentence-transformers>=3.0",
    "rank-bm25>=0.2.2",
]
# Phase 3 : orchestration multi-agent (LangGraph seul, pas de LlamaIndex).
agents = [
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "langchain-anthropic>=0.2",
    "anthropic>=0.34",
]
# Phase 4 : exposition.
api = ["fastapi>=0.111", "uvicorn[standard]>=0.30", "python-multipart>=0.0.9"]
ui = ["streamlit>=1.36", "pandas>=2.2", "openpyxl>=3.1"]
# Phase 5 : évaluation.
eval = ["scikit-learn>=1.5", "pandas>=2.2"]

[project.scripts]
gor = "governed_omop_rag.cli:app"

[dependency-groups]
# Groupe dev (installé par init.sh) — outillage qualité.
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/governed_omop_rag"]

# ----------------------------------------------------------------------------
# Qualité : ruff (lint + format), mypy (typage), pytest (tests).
# ----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]
# UP017 : suggère datetime.UTC (3.11-only) ; on garde timezone.utc pour la portabilité.
ignore = ["UP017"]

[tool.ruff.lint.isort]
known-first-party = ["governed_omop_rag"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
files = ["src", "tests"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: tests d'intégration (peuvent nécessiter Qdrant/API, plus lents)",
    "smoke: smoke-tests rapides validant que l'environnement est sain",
]

[tool.coverage.run]
source = ["src/governed_omop_rag"]
branch = true
